FIX: Mobile Font Size
- Font size of the nav menu was set too large for mobile.

--- a/site-flask-mustache/www/css/index.css
+++ b/site-flask-mustache/www/css/index.css
@@ -76,7 +76,7 @@ p.aside_par {
   }
 
   body > header nav {
-    font-size: 250%;
+    font-size: 200%;
   }
 
   body div.modal-body {
@@ -134,7 +134,7 @@ p.aside_par {
   }
 
   body > header nav {
-    font-size: 250%;
+    font-size: 200%;
   }
 
   body div.modal-body {
